manifests/workloads/tabby/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tabby-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tabby
  template:
    metadata:
      labels:
        app: tabby
    spec:
      restartPolicy: Always
      runtimeClassName: nvidia
      containers:
      - name: tabby-container
        image: core.harbor.homelab.danmanners.com/docker.io/tabbyml/tabby:0.3.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tabby-volume
          mountPath: /data
        args: ["serve", "--model", "TabbyML/$(MODEL)", "--device", "cuda"]
        resources:
          limits:
            nvidia.com/gpu: 1
            cpu: 7
            memory: 28Gi
          requests:
            nvidia.com/gpu: 1
            cpu: 1
            memory: 4Gi
      volumes:
      - name: tabby-volume
        persistentVolumeClaim:
          claimName: tabby-pvc
