manifests/workloads/tabby/kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tabby
  labels:
    app: tabby
spec:
  selector:
    app: tabby
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
